# level_editor

./: Cargo.toml  preview_shader.wgsl  shader.wgsl  ui_shader.wgsl
app/: Cargo.toml
app/src/: main.rs
app/src/window/: gui.rs  mod.rs  window.rs
gfx/: Cargo.toml
gfx/src/: builder.rs  definitions.rs  lib.rs
gfx/src/gui/: camera.rs  interface.rs  mod.rs
