[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.11"
pollster = "0.4.0"
anyhow = "1.0.98"
wgpu = "26.0.1"
log = "0.4"
env_logger = "0.11.8"
font-kit = "0.14.3"
toml = "0.9.3"
serde = {version = "1.0.219", features = ["derive"] }

libloading = "0.8"
image = "0.25.6"

gfx = { path = "../gfx" }